manifestos/deployment/ingress-hosts.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /grpc
            pathType: Prefix
            backend:
              service:
                name: grpc-weather-app
                port:
                  number: 9003
          - path: /http
            pathType: Prefix
            backend:
              service:
                name: grpc-weather-app
                port:
                  number: 8003
